fix IntelliJ warnings